--- a/TeduShop.Data/TeduShop.Data.csproj
+++ b/TeduShop.Data/TeduShop.Data.csproj
@@ -60,6 +60,10 @@
     <Compile Include="Migrations\201606091528217_InitialDB.Designer.cs">
       <DependentUpon>201606091528217_InitialDB.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201606201341470_InitialDB2.cs" />
+    <Compile Include="Migrations\201606201341470_InitialDB2.Designer.cs">
+      <DependentUpon>201606201341470_InitialDB2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\FooterRepository.cs" />
@@ -98,6 +102,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201606091528217_InitialDB.resx">
       <DependentUpon>201606091528217_InitialDB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606201341470_InitialDB2.resx">
+      <DependentUpon>201606201341470_InitialDB2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
